--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,7 +4,7 @@
 
 // Set a custom color
 $orange: #f4623a !default;
-$brown: #0192b3 !default;
+$blue: #0192b3 !default;
 
 // Set primary color to orange
 $primary: $orange !default;
@@ -17,13 +17,11 @@ $primary: $orange !default;
   font-size: 1.3em;
 }
 
-// .container-fluid {
-//   width: 100%;
-//   padding-right: 1px;
-//   padding-left: 1px;
-//   margin-right: auto;
-//   margin-left: auto;
-// }
+.container {
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+}
 
 .text-main {
   $font-family-sans-serif: "Merriweather Sans", -apple-system,
@@ -207,10 +205,25 @@ $navbar-height: 72px;
   color: #000000;
 }
 
+.number-circle {
+  background-color: $orange;
+  border-radius: 50%;
+  text-align: center;
+  max-width: 30px;
+  left: 50%;
+  bottom: 50%;
+}
+
 .progress-wrap h3 {
   font-weight: 800;
   font-size: 25px;
   color: #000000;
+}
+
+.progress-wrap1 {
+  border-right: solid 1px rgba(255, 255, 255, 0.824);
+  margin-right: -20px;
+  padding-right: 40px;
 }
 
 .heading-nav {
@@ -1310,227 +1323,7 @@ STYLE SWITCHER FOR DEMO
   height: 7.75325%;
 }
 
-/////////////cards/////////////////////
-
-// $bg-color: #e6e5e1;
-// $shdow-gray: #d3d3d5;
-// $orange: #da4d1d;
-// $blue: #2b26c3;
-// $img-url: "https://images.unsplash.com/photo-1525543907410-b2562b6796d6?ixlib=rb-0.3.5&s=9ff8e5e718a6a40cbd0e1471235912f4&auto=format&fit=crop&w=3452&q=80";
-// $img-url2: "https://images.unsplash.com/photo-1528785198459-ec50485704c7?ixlib=rb-0.3.5&s=3a2fc3039516555bbb2e9cd2967bd321&auto=format&fit=crop&w=1537&q=80";
-
-// * {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-// }
-
-// i {
-//   opacity: 0;
-// }
-
-// h4 {
-//   pointer-events: none;
-// }
-
-// .card {
-//   position: relative;
-//   width: 100%;
-//   height: 100%;
-//   background-color: #fff;
-//   overflow: hidden;
-//   margin-bottom: 4px;
-
-//   &:before {
-//     content: "";
-//     z-index: 99;
-//     position: absolute;
-//     top: -10px;
-//     left: 32px;
-//     display: block;
-//     width: 16px;
-//     height: 16px;
-//     border-radius: 16px;
-//     background-color: $bg-color;
-//   }
-//   &:after {
-//     content: "";
-//     z-index: 99;
-//     position: absolute;
-//     bottom: -10px;
-//     left: 32px;
-//     display: block;
-//     width: 16px;
-//     height: 16px;
-//     border-radius: 16px;
-//     background-color: $bg-color;
-//   }
-//   ul {
-//     z-index: 99;
-//     position: absolute;
-//     left: 39px;
-//     top: 5px;
-//     list-style-type: none;
-//     li {
-//       width: 2px;
-//       height: 2px;
-//       border-radius: 2px;
-//       margin: 6px 0;
-//       background-color: $bg-color;
-//     }
-//   }
-//   h4 {
-//     z-index: 99;
-
-//     position: absolute;
-
-//     color: $orange;
-//     bottom: 0;
-//     right: 110px;
-//     font-size: 40px;
-//     font-weight: 700;
-//     -webkit-transition: all 0.2s ease;
-//     transition: all 0.2s ease;
-//   }
-
-//   .right {
-//     z-index: 100;
-//     position: absolute;
-//     right: 25px;
-//     bottom: 18px;
-
-//     cursor: pointer;
-//   }
-//   p {
-//     z-index: 99;
-//     position: absolute;
-//     top: 0px;
-//     right: 70px;
-//     padding-top: 10px;
-//     padding-bottom: 10px;
-//     color: #333;
-
-//     letter-spacing: 0.2em;
-//     opacity: 0.7;
-//     font-size: 8px;
-//     letter-spacing: 1px;
-//     writing-mode: vertical-lr;
-//     -webkit-transition: all 0.2s ease;
-//     transition: all 0.2s ease;
-//   }
-//   .pic {
-//     z-index: -0;
-//     width: 100%;
-//     height: 100%;
-//     background-image: url($img-url);
-//     background-size: 100% 100%;
-//     filter: grayscale(100%);
-//   }
-
-//   .social {
-//     position: absolute;
-//     left: 60px;
-//     top: 0;
-//     display: -webkit-box;
-//     display: -ms-flexbox;
-//     display: flex;
-//     -ms-flex-pack: distribute;
-//     justify-content: space-around;
-//     -webkit-box-align: center;
-//     -ms-flex-align: center;
-//     align-items: center;
-//     width: 180px;
-//     height: 64px;
-//     border-radius: 80px;
-//   }
-
-//   .social i:nth-of-type(1) {
-//     -webkit-transition-delay: 0.4s;
-//     transition-delay: 0.4s;
-//   }
-
-//   .social i:nth-of-type(2) {
-//     -webkit-transition-delay: 0.3s;
-//     transition-delay: 0.3s;
-//   }
-
-//   .social i:nth-of-type(3) {
-//     -webkit-transition-delay: 0.2s;
-//     transition-delay: 0.2s;
-//   }
-
-//   .social i:nth-of-type(4) {
-//     -webkit-transition-delay: 0.1s;
-//     transition-delay: 0.1s;
-//   }
-
-//   &:hover i {
-//     opacity: 1;
-//     -webkit-transform: scale(1);
-//     transform: scale(1);
-//   }
-
-//   button {
-//     position: absolute;
-//     right: 14px;
-//     bottom: 14px;
-//     width: 30px;
-//     height: 30px;
-//     background-color: #ff5e00f0;
-//     border: none;
-//     border-radius: 30px;
-//     cursor: pointer;
-//     outline: none;
-//     transition: all 0.3s ease;
-
-//     i {
-//       font-size: 3rem;
-//     }
-//   }
-
-//   &:hover button {
-//     transform: scaleX(90.5);
-//     border-radius: 0px;
-//     position: absolute;
-//     height: 55px;
-//     background-blend-mode: multiply;
-//   }
-
-//   &:hover p {
-//     color: #fff;
-//     transition: all 0.3s ease;
-//     background-color: #000000;
-//   }
-
-//   &:hover .hide-title {
-//     display: none;
-//     transition: all 0.3s ease;
-//   }
-
-//   &:hover .pic {
-//     filter: grayscale(0);
-//   }
-// }
-
-// .card2 {
-//   .pic {
-//     background-image: url($img-url2);
-//   }
-//   button {
-//     background-color: $blue;
-//   }
-// }
-
-// .dr {
-//   position: absolute;
-//   bottom: 16px;
-//   right: 16px;
-//   width: 100px;
-// }
-
-// .projects-tabs {
-//   background-color: "red";
-// }
+///////////////////////////// projects cards /////////////////////////////////////////////
 
 $bg-color: #e6e5e1;
 $shdow-gray: #d3d3d5;
@@ -1632,7 +1425,7 @@ h2 {
     font-family: verdana;
     font-weight: 700;
     color: #000000;
-    font-size: 1.2em;
+    font-size: 1.5em;
     display: none;
     color: transparent;
     display: flex;
@@ -1653,7 +1446,7 @@ h2 {
   .pg-text {
     position: absolute;
 
-    font-size: 0.9rem;
+    font-size: 1em;
     display: none;
     color: transparent;
     display: flex;
@@ -2315,16 +2108,16 @@ $color-tertiary-dark: #5643fa;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-color: turquoise;
+
     transition: all 0.6s ease;
     box-shadow: 1em 1em 2em rgba(0, 0, 0, 0.2);
 
     &--front {
-      background-color: rgb(255, 37, 37);
+      background-color: transparent;
     }
 
     &--back {
-      color: #fff;
+      color: black;
       transform: rotateY(180deg);
 
       &-1 {
@@ -2374,26 +2167,107 @@ $color-tertiary-dark: #5643fa;
   }
 }
 
+//////////////////////////////////////////@at-root
+
+.card-2 {
+  width: 100%;
+  position: relative;
+  height: 340px;
+  margin: 1em;
+  perspective: 150em;
+  background-color: transparent;
+
+  &__side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+
+    transition: all 0.6s ease;
+    box-shadow: 1em 1em 2em rgba(0, 0, 0, 0.2);
+
+    &--front {
+      background-color: transparent;
+    }
+
+    &--back {
+      color: black;
+      transform: rotateY(180deg);
+
+      &-1 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        );
+      }
+
+      &-2 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        );
+      }
+
+      &-3 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
+      }
+    }
+  }
+
+  &:hover &__side--front {
+    transform: rotateY(-180deg);
+  }
+
+  &:hover &__side--back {
+    transform: rotate(0);
+  }
+
+  &__description {
+    text-transform: uppercase;
+    font-size: 5em;
+    padding: 1em 0;
+
+    svg {
+      width: 1.5em;
+      height: 1.5em;
+      fill: #fff;
+    }
+  }
+}
+
+/////////////////////////////////////////////////////////
 .profile-card-3 {
   font-family: "Open Sans", Arial, sans-serif;
   position: relative;
   float: left;
   overflow: hidden;
   width: 100%;
-  text-align: center;
-  height: 100%;
+
+  height: 368px;
   border: none;
 }
+
 .profile-card-3 .background-block {
   float: left;
   width: 100%;
   height: 200px;
   overflow: hidden;
+  background-color: #0192b3;
 }
 .profile-card-3 .background-block .background {
-  width: 125%;
+  width: 100%;
   vertical-align: top;
-  opacity: 0.9;
+  opacity: 0.2;
+  -webkit-filter: blur(0.5px);
+  filter: blur(0.5px);
 }
 .profile-card-3 .card-content {
   width: 100%;
@@ -2406,30 +2280,32 @@ $color-tertiary-dark: #5643fa;
   position: relative;
   z-index: 9999;
 }
-.profile-card-3 .card-content::before img {
+.profile-card-3 .card-content::before {
   content: "";
   background: #efefef;
   width: 120%;
   height: 100%;
-  left: 9px;
+  left: 8px;
   bottom: 51px;
   position: absolute;
   z-index: -1;
-  transform: rotate(-10deg);
+  transform: rotate(-8deg);
 }
 .profile-card-3 .profile {
-  border-radius: 50%;
   position: absolute;
   bottom: 50%;
   left: 50%;
   max-width: 100px;
   opacity: 1;
+  padding: 20px;
+  background-color: $orange;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
   border: 2px solid rgba(255, 255, 255, 1);
   -webkit-transform: translate(-50%, 0%);
   transform: translate(-50%, 0%);
   z-index: 99999;
 }
+
 .profile-card-3 h2 {
   margin: 0 0 5px;
   font-weight: 600;
@@ -2460,10 +2336,88 @@ $color-tertiary-dark: #5643fa;
 .profile-card-3 .icon-block a {
   text-decoration: none;
 }
-.profile-card-3 .img i:hover {
+.profile-card-3 i:hover {
   background-color: #232323;
   color: #fff;
   text-decoration: none;
+}
+
+.profile-card-2 {
+  font-family: "Open Sans", Arial, sans-serif;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  width: 100%;
+
+  height: 368px;
+  border: none;
+}
+
+.profile-card-2 .background-block {
+  float: left;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  background-color: #0192b3;
+}
+.profile-card-2 .background-block .background {
+  width: 100%;
+  vertical-align: top;
+  opacity: 0.2;
+  -webkit-filter: blur(0.5px);
+  filter: blur(0.5px);
+}
+.profile-card-2 .card-content {
+  width: 100%;
+  padding: 15px 25px;
+  color: #232323;
+  float: left;
+  background: #efefef;
+  height: 50%;
+  border-radius: 0 0 5px 5px;
+  position: relative;
+  z-index: 9999;
+}
+.profile-card-2 .card-content::before {
+  content: "";
+  background: #efefef;
+  width: 120%;
+  height: 100%;
+  left: 8px;
+  bottom: 51px;
+  position: absolute;
+  z-index: -1;
+  transform: rotate(-8deg);
+}
+.profile-card-2 .profile {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  max-width: 100px;
+  opacity: 1;
+  padding: 20px;
+  background-color: $orange;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
+  border: 2px solid rgba(255, 255, 255, 1);
+  -webkit-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+  z-index: 99999;
+}
+
+.profile-card-2 h2 {
+  margin: 0 0 5px;
+  font-weight: 600;
+  font-size: 25px;
+}
+.profile-card-2 h2 small {
+  display: block;
+  font-size: 15px;
+  margin-top: 10px;
+}
+.profile-card-2 i {
+  display: inline-block;
+  font-size: 16px;
+  color: #232323;
   text-align: center;
   border: 1px solid #232323;
   width: 30px;
@@ -2471,4 +2425,104 @@ $color-tertiary-dark: #5643fa;
   line-height: 30px;
   border-radius: 50%;
   margin: 0 5px;
+}
+.profile-card-2 .icon-block {
+  float: left;
+  width: 100%;
+  margin-top: 15px;
+}
+.profile-card-2 .icon-block a {
+  text-decoration: none;
+}
+.profile-card-2 i:hover {
+  background-color: #232323;
+  color: #fff;
+  text-decoration: none;
+}
+
+.overlay {
+  position: absolute;
+
+  background-color: "red";
+}
+
+.month__card .month__card__input {
+  height: 25px;
+  line-height: 25px;
+  font-size: 12px;
+  border-radius: 0;
+  border-top: 0;
+  border-bottom: 0;
+  max-width: 100px;
+}
+
+.month__card .month__card__ico {
+  font-size: 25px;
+}
+
+/////////////////////////// RES CARD //////////////////////
+
+.box {
+  padding: 60px 0px;
+}
+
+.box-part {
+  border-radius: 0;
+  padding: 10px 10px;
+  margin: 10px 0px;
+}
+.text {
+  margin: 20px 0px;
+}
+
+.fa {
+  color: #4183d7;
+}
+
+/////////////// PROGRESS //////////////////////////@at-root
+.progress {
+  position: relative;
+  height: 25px;
+}
+
+.progress-bar-20 {
+  width: 20%;
+  background-color: $orange;
+}
+
+.progress-bar-75 {
+  width: 60%;
+  background-color: $orange;
+}
+
+.progress > .progress-type {
+  position: absolute;
+
+  left: 0px;
+  font-weight: 500;
+  padding: 3px 30px 2px 10px;
+  color: rgb(0, 0, 0);
+}
+.progress > .progress-completed {
+  position: absolute;
+  right: 0px;
+  font-weight: 200;
+  padding-right: 3px;
+}
+
+.progress-title {
+  font-weight: 200;
+
+  color: rgb(0, 0, 0);
+}
+
+.card-header {
+  text-align: left;
+  font-weight: 600;
+  background-color: #efefef;
+  color: rgb(0, 0, 0);
+}
+
+.card-text {
+  font-size: 0.9rem;
 }
