--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -11,17 +11,16 @@ $primary: #ffb700 !default;
 
 $secondary: navy !default;
 
-.badge {
-  background-color: navy;
-  color: white;
-  text-transform: uppercase;
-  font-family: verdana;
-  font-weight: 700;
-  padding: 10px;
-  font-size: 1em;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+.sec-title i{
+font-size: 15px;
+border-right: 1px solid black;
+padding-right: 8px;
 }
+
+.sec-title {
+  font-size: 23px;
+  margin-right: 2px;
+  }
 
 .badge-header {
   background-color: navy;
